Fix text overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,8 +152,9 @@ main {
 
 .key-select {
     background-color: transparent;
-    color: #ecf0f1;
-    text-indent: -9999em;
+    color: transparent;
+    /* color: #ecf0f1; */
+    /* text-indent: -9999em; */
 }
 
 .control-area {
